tests/ui/mir/build-async-error-body-correctly.stderr
error[E0004]: non-exhaustive patterns: type `bool` is non-empty
  --> $DIR/build-async-error-body-correctly.rs:4:25
   |
LL |     let binding = match true {};
   |                         ^^^^
   |
   = note: the matched value is of type `bool`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     let binding = match true {
LL +         _ => todo!(),
LL ~     };
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
